--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -29,7 +29,8 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ${{ join([ secrets.DOCKERHUB_USERNAME, inputs.SERVICE_NAME ], "/") }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{  inputs.SERVICE_NAME }}
+          # ${{ join([ , ], "/") }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=latest
