--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -30,7 +30,6 @@ jobs:
           # list of Docker images to use as base name for tags
           images: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{  inputs.SERVICE_NAME }}
-          # ${{ join([ , ], "/") }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=latest
@@ -48,6 +47,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
