--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -49,19 +49,19 @@ jobs:
       #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #     aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Set Stage
-        id: setstage
-        run: |
-          echo "Discovering the environment stage:"
-          echo "SERVICE_ENV=pr" >> $GITHUB_OUTPUT
-          if [[ ${{ github.ref == 'refs/heads/main' }} ]]; then
-            echo "SERVICE_ENV=prd" >> $GITHUB_OUTPUT
-          fi
-          if [[ ${{ github.ref == 'refs/heads/develop' }} ]]; then
-            echo "SERVICE_ENV=dev" >> $GITHUB_OUTPUT
-          fi
-          echo "Environment stage is set:"
-          echo "${{ GITHUB_OUTPUT }}"
+      # - name: Set Stage
+      #   id: setstage
+      #   run: |
+      #     echo "Discovering the environment stage:"
+      #     echo "SERVICE_ENV=pr" >> $GITHUB_OUTPUT
+      #     if [[ ${{ github.ref == 'refs/heads/main' }} ]]; then
+      #       echo "SERVICE_ENV=prd" >> $GITHUB_OUTPUT
+      #     fi
+      #     if [[ ${{ github.ref == 'refs/heads/develop' }} ]]; then
+      #       echo "SERVICE_ENV=dev" >> $GITHUB_OUTPUT
+      #     fi
+      #     echo "Environment stage is set:"
+      #     echo "${{ GITHUB_OUTPUT }}"
 
       # - name: kubeconfing
       #   id: kubeconfig
