--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -54,9 +54,9 @@ jobs:
         run: |
           echo "Discovering the environment stage:"
           echo "SERVICE_ENV=pr" >> $GITHUB_OUTPUT
-      #     if [[ ${{ github.ref == 'refs/heads/main' }} ]]; then
-      #       echo "SERVICE_ENV=prd" >> $GITHUB_OUTPUT
-      #     fi
+          if [[ ${{ github.ref == 'refs/heads/main' }} ]]; then
+            echo "SERVICE_ENV=prd" >> $GITHUB_OUTPUT
+          fi
       #     if [[ ${{ github.ref == 'refs/heads/develop' }} ]]; then
       #       echo "SERVICE_ENV=dev" >> $GITHUB_OUTPUT
       #     fi
