--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -57,11 +57,11 @@ jobs:
           if [[ ${{ github.ref == 'refs/heads/main' }} ]]; then
             echo "SERVICE_ENV=prd" >> $GITHUB_OUTPUT
           fi
-      #     if [[ ${{ github.ref == 'refs/heads/develop' }} ]]; then
-      #       echo "SERVICE_ENV=dev" >> $GITHUB_OUTPUT
-      #     fi
-      #     echo "Environment stage is set:"
-      #     echo "${{ GITHUB_OUTPUT }}"
+          if [[ ${{ github.ref == 'refs/heads/develop' }} ]]; then
+            echo "SERVICE_ENV=dev" >> $GITHUB_OUTPUT
+          fi
+          echo "Environment stage is set:"
+          echo "${{ steps.setstage.outputs.SERVICE_ENV }}"
 
       # - name: kubeconfing
       #   id: kubeconfig
@@ -70,19 +70,19 @@ jobs:
       #     echo "KUBE_CONFIG_DATA=$(cat ~/.kube/config | base64)" >> $GITHUB_OUTPUT
 
       # Configuring extra helm --set addons    
-      # - name: Helm Set
-      #   id: helmset
-      #   run: |
-      #     echo "Discovering the helm set:"
-      #     echo "HELM_SET_ADDON=' '" >> $GITHUB_OUTPUT
-      #     if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
-      #       echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}' " >> $GITHUB_OUTPUT
-      #     fi
-      #     if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
-      #       echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}' " >> $GITHUB_OUTPUT
-      #     fi
-      #     echo "Helm additional set:"
-      #     echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
+      - name: Helm Set
+        id: helmset
+        run: |
+          echo "Discovering the helm set:"
+          echo "HELM_SET_ADDON=' '" >> $GITHUB_OUTPUT
+          if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
+            echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}' " >> $GITHUB_OUTPUT
+          fi
+          if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
+            echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}' " >> $GITHUB_OUTPUT
+          fi
+          echo "Helm additional set:"
+          echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
       #   id: eksdeploy
