--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -74,9 +74,10 @@ jobs:
         id: helmset
         run: |
           echo "Discovering the helm set:"
-          echo "HELM_SET_ADDON=' '" >> $GITHUB_OUTPUT
+          echo "HELM_SET_ADDON=barev" >> $GITHUB_OUTPUT
+          echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
           if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
-            echo "HELM_SET_ADDON=\"${{ steps.helmset.outputs.HELM_SET_ADDON }} --set \'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}\' \"  " >> $GITHUB_OUTPUT
+            echo "HELM_SET_ADDON=\" ${{ steps.helmset.outputs.HELM_SET_ADDON }} --set \'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}\' \"  " >> $GITHUB_OUTPUT
           fi
           if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
             echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}' " >> $GITHUB_OUTPUT
