--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -70,18 +70,33 @@ jobs:
       #     echo "KUBE_CONFIG_DATA=$(cat ~/.kube/config | base64)" >> $GITHUB_OUTPUT
 
       # Configuring extra helm --set addons    
+      # - name: Helm Set
+      #   id: helmset
+      #   run: |
+      #     echo "Discovering the helm set:"
+      #     echo "HELM_SET_ADDON=barev" >> $GITHUB_OUTPUT
+      #     echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
+      #     if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
+      #       echo "HELM_SET_ADDON=\" ${{ steps.helmset.outputs.HELM_SET_ADDON }} --set \'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}\' \"  " >> $GITHUB_OUTPUT
+      #     fi
+      #     if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
+      #       echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}' " >> $GITHUB_OUTPUT
+      #     fi
+      #     echo "Helm additional set:"
+      #     echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
+
       - name: Helm Set
         id: helmset
         run: |
           echo "Discovering the helm set:"
-          echo "HELM_SET_ADDON=barev" >> $GITHUB_OUTPUT
-          echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
+          HELM_SET_STR=""
           if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
-            echo "HELM_SET_ADDON=\" ${{ steps.helmset.outputs.HELM_SET_ADDON }} --set \'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}\' \"  " >> $GITHUB_OUTPUT
+            HELM_SET_STR="$HELM_SET_STR  --set 'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}'
           fi
           if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
-            echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}' " >> $GITHUB_OUTPUT
+            HELM_SET_STR="$HELM_SET_STR  --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}'
           fi
+          echo "HELM_SET_ADDON=$HELM_SET_STR" >> $GITHUB_OUTPUT
           echo "Helm additional set:"
           echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
 
