--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -102,7 +102,14 @@ jobs:
           echo $HELM_SET_STR
           echo 'HELM_SET_ADDON=${HELM_SET_STR}' >> $GITHUB_OUTPUT
           echo "Helm additional set:"
-          echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
+         
+      - name: Helm Test
+        id: helmtest
+        shell: bash
+        run: |
+           echo "Barev" 
+           echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
+
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
       #   id: eksdeploy
