--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -109,8 +109,8 @@ jobs:
         shell: bash
         run: |
            echo "Barev" 
-           echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
-           echo "${{ steps.helmset.outputs.HELM_SET_HAJOX }}"
+           echo ${{ steps.helmset.outputs.HELM_SET_ADDON }}
+           echo ${{ steps.helmset.outputs.HELM_SET_HAJOX }}
 
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
