--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -110,7 +110,7 @@ jobs:
         run: |
            echo "Barev" 
            #  echo ${{ steps.helmset.outputs.HELM_SET_ADDON }}
-           echo ${{ steps.helmset.outputs.HELM_SET_HAJOX }}
+           echo "${{ steps.helmset.outputs.HELM_SET_HAJOX }}"
 
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
