--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -100,7 +100,7 @@ jobs:
           echo "AVAR"
           echo "${HELM_SET_STR}"
           echo $HELM_SET_STR
-          # echo "HELM_SET_ADDON=$(echo $HELM_SET_STR)" >> $GITHUB_OUTPUT
+          echo "HELM_SET_ADDON=$(echo $HELM_SET_STR)" >> $GITHUB_OUTPUT
           echo "HELM_SET_HAJOX=hajox" >> $GITHUB_OUTPUT
           echo "Helm additional set:"
          
