--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -111,7 +111,7 @@ jobs:
            echo "Barev" 
            a=${{ steps.helmset.outputs.HELM_SET_ADDON }}
            echo $a
-           echo ${{ steps.helmset.outputs.HELM_SET_HAJOX }}
+           echo ${{ steps.helmset.output.HELM_SET_HAJOX }}
 
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
