--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -92,24 +92,21 @@ jobs:
           echo "Discovering the helm set:"
           HELM_SET_STR=""
           if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
-            HELM_SET_STR+=' --set "image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}"'
+            HELM_SET_STR+=" --set 'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}'"
           fi
           if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
-            HELM_SET_STR+=' --set "image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}"'
+            HELM_SET_STR+=" --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}'"
           fi
           echo "AVAR"
           echo "${HELM_SET_STR}"
           echo $HELM_SET_STR
           echo "HELM_SET_ADDON=$(echo $HELM_SET_STR)" >>$GITHUB_OUTPUT
           echo "HELM_SET_HAJOX=hajox" >>$GITHUB_OUTPUT
-          echo "Helm additional set:"
          
       - name: Helm Test
         id: helmtest
         run: |
-           a=${{ steps.helmset.outputs.HELM_SET_ADDON }}
-           echo $a
-           echo ${{ steps.helmset.outputs.* }}
+           echo "${{ steps.helmset.outputs.HELM_SET_HAJOX }}"
 
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
