--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -91,23 +91,23 @@ jobs:
         run: |
           echo "Discovering the helm set:"
           HELM_SET_STR=""
-          if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
+        
+          echo "SERVICE_DOCKER_REPOSITORY=${{ inputs.SERVICE_DOCKER_REPOSITORY }}"
+          if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != "" }} ]]; then
             HELM_SET_STR+=" --set 'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}'"
           fi
+          echo "SERVICE_DOCKER_IMAGE_TAG=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}"
           if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
             HELM_SET_STR+=" --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}'"
           fi
-          echo "AVAR"
+          echo "HELM_SET_STR value is:"
           echo "${HELM_SET_STR}"
-          echo $HELM_SET_STR
           echo "HELM_SET_ADDON=$(echo $HELM_SET_STR)" >>$GITHUB_OUTPUT
-          echo "HELM_SET_HAJOX=hajox" >>$GITHUB_OUTPUT
          
       - name: Helm Test
         id: helmtest
         run: |
            echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
-           echo "${{ steps.helmset.outputs.HELM_SET_HAJOX }}"
 
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
