--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -93,15 +93,14 @@ jobs:
           HELM_SET_STR=""
         
           echo "SERVICE_DOCKER_REPOSITORY=${{ inputs.SERVICE_DOCKER_REPOSITORY }}"
-          if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != "" }} ]]; then
+          if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
             HELM_SET_STR+=" --set 'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}'"
           fi
           echo "SERVICE_DOCKER_IMAGE_TAG=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}"
           if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
             HELM_SET_STR+=" --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}'"
           fi
-          echo "HELM_SET_STR value is:"
-          echo "${HELM_SET_STR}"
+          echo "HELM_SET_STR value is: ${HELM_SET_STR}"
           echo "HELM_SET_ADDON=$(echo $HELM_SET_STR)" >>$GITHUB_OUTPUT
          
       - name: Helm Test
