--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -91,12 +91,12 @@ jobs:
           HELM_SET_STR=""
         
           echo "SERVICE_DOCKER_REPOSITORY=${{ inputs.SERVICE_DOCKER_REPOSITORY }}"
-          if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
+          if ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ; then
             HELM_SET_STR+=" --set 'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}'"
           fi
 
           echo "SERVICE_DOCKER_IMAGE_TAG=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}"
-          if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
+          if ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ; then
             HELM_SET_STR+=" --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}'"
           fi
 
