--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -52,14 +52,13 @@ jobs:
         run: |
           echo "Discovering the environment stage:"
           echo "SERVICE_ENV=pr" >> $GITHUB_OUTPUT
-          if [[ ${{ github.ref == 'refs/heads/main' }} ]]; then
-            echo "SERVICE_ENV=prd" >> $GITHUB_OUTPUT
+          if ${{ github.ref == 'refs/heads/main' }} ; then
+            echo "SERVICE_ENV=prd" >>$GITHUB_OUTPUT
           fi
-          if [[ ${{ github.ref == 'refs/heads/develop' }} ]]; then
-            echo "SERVICE_ENV=dev" >> $GITHUB_OUTPUT
+          if ${{ github.ref == 'refs/heads/develop' }} ; then
+            echo "SERVICE_ENV=dev" >>$GITHUB_OUTPUT
           fi
-          echo "Environment stage is set:"
-          echo "${{ steps.setstage.outputs.SERVICE_ENV }}"
+          echo "Environment stage is set: ${{ steps.setstage.outputs.SERVICE_ENV }}"
 
       # - name: kubeconfing
       #   id: kubeconfig
@@ -67,22 +66,7 @@ jobs:
       #     aws eks update-kubeconfig --name ${{ inputs.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
       #     echo "KUBE_CONFIG_DATA=$(cat ~/.kube/config | base64)" >> $GITHUB_OUTPUT
 
-      # Configuring extra helm --set addons    
-      # - name: Helm Set
-      #   id: helmset
-      #   run: |
-      #     echo "Discovering the helm set:"
-      #     echo "HELM_SET_ADDON=barev" >> $GITHUB_OUTPUT
-      #     echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
-      #     if [[ ${{ inputs.SERVICE_DOCKER_REPOSITORY != '' }} ]]; then
-      #       echo "HELM_SET_ADDON=\" ${{ steps.helmset.outputs.HELM_SET_ADDON }} --set \'image.repository=${{ inputs.SERVICE_DOCKER_REPOSITORY }}\' \"  " >> $GITHUB_OUTPUT
-      #     fi
-      #     if [[ ${{ inputs.SERVICE_DOCKER_IMAGE_TAG != '' }} ]]; then
-      #       echo "HELM_SET_ADDON=${{ steps.helmset.outputs.HELM_SET_ADDON }} --set 'image.tag=${{ inputs.SERVICE_DOCKER_IMAGE_TAG }}' " >> $GITHUB_OUTPUT
-      #     fi
-      #     echo "Helm additional set:"
-      #     echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
-
+      # Configuring extra helm --set addons 
       - name: Helm Set
         id: helmset
         shell: bash
@@ -103,10 +87,11 @@ jobs:
           echo "HELM_SET_STR value is: ${HELM_SET_STR}"
           echo "HELM_SET_ADDON=$(echo $HELM_SET_STR)" >>$GITHUB_OUTPUT
          
-      - name: Helm Test
-        id: helmtest
+      - name: Test
+        id: test
         run: |
-           echo "${{ steps.helmset.outputs.HELM_SET_ADDON }}"
+           echo "Stage constructed: ${{ steps.setstage.outputs.SERVICE_ENV }}  "
+           echo "Helm set constructed: ${{ steps.helmset.outputs.HELM_SET_ADDON }}""
 
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
