--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -91,7 +91,7 @@ jobs:
         id: test
         run: |
            echo "Stage constructed: ${{ steps.setstage.outputs.SERVICE_ENV }}  "
-           echo "Helm set constructed: ${{ steps.helmset.outputs.HELM_SET_ADDON }}""
+           echo "Helm set constructed: ${{ steps.helmset.outputs.HELM_SET_ADDON }}"
 
 
       # - name: Deploy ${{ inputs.SERVICE_NAME }} to kubernetes namespace ${{ inputs.SERVICE_K8_NAMESPACE }}
