--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -7,12 +7,14 @@ on:
         required: true
         type: string
     secrets:
-      DOCKERHUB_USERNAME:
+      DOPPLER_TOKEN:
         required: true
-      DOCKERHUB_TOKEN:
-        required: true
-      NPM_TOKEN: 
-        required: true
+      # DOCKERHUB_USERNAME:
+      #   required: true
+      # DOCKERHUB_TOKEN:
+      #   required: true
+      # NPM_TOKEN: 
+      #   required: true
     # Map the workflow outputs to job outputs
     outputs:
       git_sha_short:
@@ -25,6 +27,14 @@ jobs:
       sha_short: ${{ steps.extract_branch.outputs.sha_short }}
     runs-on: ubuntu-latest
     steps:
+
+      - name: Login in Doppler
+        uses: dopplerhq/cli-action@v1
+        run: |
+          doppler secrets download --no-file --format=docker >> $GITHUB_ENV;
+        env:
+          DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -34,7 +44,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{  inputs.SERVICE_NAME }}
+            ${{ env.DOCKERHUB_USERNAME }}/${{  inputs.SERVICE_NAME }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=latest
@@ -60,8 +70,8 @@ jobs:
       # - name: Login to DockerHub
       #   uses: docker/login-action@v2
       #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      #     username: ${{ env.DOCKERHUB_USERNAME }}
+      #     password: ${{ env.DOCKERHUB_TOKEN }}
 
       # - name: Build and push
       #   id: docker_build
@@ -71,7 +81,7 @@ jobs:
       #     platforms: linux/amd64,linux/arm64
       #     push: true
       #     build-args: |
-      #       NPM_TOKEN=${{ secrets.NPM_TOKEN }}
+      #       NPM_TOKEN=${{ env.NPM_TOKEN }}
       #     tags: ${{ steps.meta.outputs.tags }}
           
       # - name: Image digest
