--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -28,8 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - uses: dopplerhq/cli-action@v1
       - name: Login in Doppler
-        uses: dopplerhq/cli-action@v1
         run: |
           doppler secrets download --no-file --format=docker >> $GITHUB_ENV;
         env:
