--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -54,9 +54,10 @@ jobs:
           aws eks update-kubeconfig --name ${{ secrets.AWS_EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
           
           #echo "KUBE_CONFIG_DATA=$(cat ~/.kube/config | base64)" >> $GITHUB_OUTPUT
-          echo 'KUBE_CONFIG_DATA<<EOF' >> $GITHUB_OUTPUT
-          $(cat ~/.kube/config | base64) >> $GITHUB_OUTPUT
-          echo 'EOF' >> $GITHUB_OUTPUT
+          # echo 'KUBE_CONFIG_DATA<<EOF' >> $GITHUB_OUTPUT
+          # $(cat ~/.kube/config | base64) >> $GITHUB_OUTPUT
+          # echo 'EOF' >> $GITHUB_OUTPUT
+          echo -e "KUBE_CONFIG_DATA<<EOF\n$(cat ~/.kube/config | base64)\nEOF" >> $GITHUB_OUTPUT
           if ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN != '' }} ; then
             echo "KUBE_HOSTNAME=$(kubectl get svc ingress-nginx-controller -n ingress-nginx -o json | jq -r '.status.loadBalancer.ingress[0].hostname')" >> $GITHUB_OUTPUT
           fi
